Fixed responsive and menu on mobile resolutions

--- a/src/styles/sass/_mixins.scss
+++ b/src/styles/sass/_mixins.scss
@@ -12,6 +12,8 @@
 
 @mixin paddingContainer {
   @media (min-width: 1040px) {
-    padding: 0 calc(100vw - 1150px);
+    width: 1040px;
+    margin: auto;
+    //padding: 0 calc(100vw - 1150px);
   }
 }
